Updated D3 to v4. Trying to see if this works already

--- a/public/openings/openings.html
+++ b/public/openings/openings.html
@@ -25,7 +25,7 @@
 	<input type="submit" id="Search" value="Search" onclick="search()">
 	<input type="submit" value="Compact" onclick="compact()">
 	<input type="submit" value="Extend" onclick="extend()">
-	<input type="submit" value="About" onclick="window.open('https://tailuge.github.io/chess-o-tron/','_blank');" title="Green is good from the players perspective, red is bad. Each page is 100 of your games, Pages=1,2,3 will use your last 300 games to build the graph. The filter is a regular expression to limit the opening moves e.g. e4 e5 f4 exf4 would filter for KGA">
+	<input type="submit" value="About" onclick="window.open('https://ricardoschullerSL.github.io/chess-o-tron/','_blank');" title="Green is good from the players perspective, red is bad. Each page is 100 of your games, Pages=1,2,3 will use your last 300 games to build the graph. The filter is a regular expression to limit the opening moves e.g. e4 e5 f4 exf4 would filter for KGA">
 
 
 	<div id="status" style="font-size: 11px;"></div>
@@ -33,7 +33,7 @@
 
 	</html>
 	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<script src="https://d3js.org/d3.v4.js"></script>
 	<script src="util.js"></script>
 	<script src="trie-calc.js"></script>
 	<script src="trie-d3.js"></script>
