Started from scratch, will try to recreate as much as possible

--- a/public/openings/openings.html
+++ b/public/openings/openings.html
@@ -36,7 +36,7 @@
 	<script src="https://d3js.org/d3.v4.js"></script>
 	<script src="util.js"></script>
 	<script src="trie-calc.js"></script>
-	<script src="trie-d3.js"></script>
+	<script src="trie-d3-ricardo.js"></script>
 	<script src="trie-data.js"></script>
 	<script>
 		/* globals fetchLichessData processData updateUrlWithState*/
