--- a/public/openings/openings.html
+++ b/public/openings/openings.html
@@ -34,6 +34,7 @@
 	</html>
 	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 	<script src="https://d3js.org/d3.v4.js"></script>
+	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="util.js"></script>
 	<script src="trie-calc.js"></script>
 	<script src="trie-d3-ricardo.js"></script>
